--- a/ImpactMap/Views/Investments/Index.cshtml
+++ b/ImpactMap/Views/Investments/Index.cshtml
@@ -42,7 +42,7 @@
                         In Kind
                         @*@Html.DisplayNameFor(model => model.isInKind)*@
                     </th>
-                    <th>
+                    <th class="noSortTH">
                         Tags
                         @*@Html.DisplayNameFor(model => model.categories)*@
                     </th>
