--- a/ImpactMap/Content/Site.css
+++ b/ImpactMap/Content/Site.css
@@ -10,6 +10,36 @@ body {
   
 }
 
+.investment-form{
+    position: relative;
+}
+
+.investment-form h4{
+    padding-left: 0;
+    color: black;
+    font-weight: 600;
+    padding-bottom: 10px;
+}
+
+.investment-form h5{
+    font-weight: 600
+}
+
+.baseParagraph{
+    padding-left: 20px;
+}
+
+
+#displayCatMetrics{
+    border: 1px gray solid;
+    border-radius: 5px;
+    padding:  5px 10px;
+}
+
+.no-bullets{
+    list-style: none;
+}
+
 .checkbox{
     color:white;
 }
@@ -118,6 +148,15 @@ a href {
     border-radius: 5px;
 }
 
+/*.investment-form{
+    border-left: 2px gray solid;
+    height: 100%;
+}
+
+.investment-form:first-of-type {
+        border-left: none;
+ }*/
+
 .button:hover, a.button:hover, .button:active, a.button:active{
     background-color: #92C337;
     color:white;
@@ -126,6 +165,15 @@ a href {
 .buttonAlert{
     background-color: #d91b5c;
     margin-bottom: 25px;
+}
+
+.buttonGray{
+    background-color: gray;
+}
+
+.button-bottom{
+    position: absolute;
+    bottom: 0;
 }
 
 /*styles map*/
@@ -482,7 +530,6 @@ inputWLabel {
     margin-bottom: 15px;
     
 }
-
 
 .dash h2 {
     border-bottom: none;
