--- a/ImpactMap/Views/Categories/CreateBase.cshtml
+++ b/ImpactMap/Views/Categories/CreateBase.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <h2>@ViewBag.Title</h2>
-    <h3>Base tags are broad categories that apply to a wide range of investments.  Please use this form only to create a broad category, such as "Economic Development".  If you are creating a tag that is more specific to your organization, please go back and create a user tag under the most relevant base tag in the system.</h3>
+    <p class="baseParagraph">Base tags are broad categories that apply to a wide range of investments.  Please use this form only to create a broad category, such as "Economic Development".  If you are creating a tag that is more specific to your organization, please go back and create a user tag under the most relevant base tag in the system.</p>
 
     @using (Html.BeginForm())
     {
@@ -16,14 +16,14 @@
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(model => model.Category.name, htmlAttributes: new { @class = "control-label col-md-2" })
+               <label class = "control-label col-md-2">Program Area</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Category.name, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Category.name, "", new { @class = "text-danger" })
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.Metrics, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     <div id="displayMetrics">
@@ -32,21 +32,21 @@
                     <input type="text" id="metrics" /> <i class="fa fa-plus-circle" aria-hidden="true" id="addMetric"></i><br>
                     <input name="newMetrics" id="newMetrics" type="hidden" />
                 </div>
-            </div>
+            </div>*@
 
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="button" />
+                    <input type="submit" value="Create" class="button" /> @Html.ActionLink("Advance to Dashboard", "Index", "Dashboard", new { @class = "button" })
                 </div>
             </div>
 
         </div>
     }
 
-    <div class="addpadding">
-        @Html.ActionLink("Dashboard", "Index", "Dashboard")
-    </div>
+    
+       
+  
 
 </div>
 
